--- a/project/templates/main/index.html
+++ b/project/templates/main/index.html
@@ -31,14 +31,30 @@
                             <!-- 실시간 인기 게시물 -->
                             <strong>실시간 인기 게시물 <a href="#">+</a></strong>
                             <ul class="hoverEvent">
-                                {% for data in community %}
-                                    <li>
-                                        <a href="#}">
-                                            <p>{{ data.title }}</p>
-                                            <time>10.20 15:20</time>
-                                        </a>
-                                    </li>
-                                {% endfor %}
+                                <li>
+                                    <a href="#">
+                                        <p>2학년 되고</p>
+                                        <time>10.20 15:20</time>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <p>지갑 잃어버리신 분??</p>
+                                        <time>10.20 10:20</time>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <p>다목하우스 주인 전화번호</p>
+                                        <time>10.20 12:10</time>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <p>쌍촌동 가는 셔틀</p>
+                                        <time>10.21 14:20</time>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
 
@@ -46,14 +62,30 @@
                         <div class="borderBox paddingBox">
                             <strong>자유게시판<a href="#">+</a></strong>
                             <ul class="hoverEvent">
-                                {% for data in community2 %}
-                                    <li>
-                                        <a href="#">
-                                            <p>{{ data.title }}</p>
-                                            <time>10.20 15:20</time>
-                                        </a>
-                                    </li>
-                                {% endfor %}
+                                <li>
+                                    <a href="#">
+                                        <p>2학년 되고</p>
+                                        <time>10.20 15:20</time>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <p>지갑 잃어버리신 분??</p>
+                                        <time>10.20 10:20</time>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <p>다목하우스 주인 전화번호</p>
+                                        <time>10.20 12:10</time>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <p>쌍촌동 가는 셔틀</p>
+                                        <time>10.21 14:20</time>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
 
@@ -61,14 +93,30 @@
                         <div class="borderBox paddingBox">
                             <strong>비밀게시판<a href="#">+</a></strong>
                             <ul class="hoverEvent">
-                                {% for data in community2 %}
-                                    <li>
-                                        <a href="#">
-                                            <p>{{ data.title }}</p>
-                                            <time>10.20 15:20</time>
-                                        </a>
-                                    </li>
-                                {% endfor %}
+                                <li>
+                                    <a href="#">
+                                        <p>2학년 되고</p>
+                                        <time>10.20 15:20</time>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <p>지갑 잃어버리신 분??</p>
+                                        <time>10.20 10:20</time>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <p>다목하우스 주인 전화번호</p>
+                                        <time>10.20 12:10</time>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <p>쌍촌동 가는 셔틀</p>
+                                        <time>10.21 14:20</time>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
 
@@ -76,14 +124,30 @@
                         <div class="borderBox paddingBox">
                             <strong>정보게시판<a href="#">+</a></strong>
                             <ul class="hoverEvent">
-                                {% for data in community2 %}
-                                    <li>
-                                        <a href="#">
-                                            <p>{{ data.title }}</p>
-                                            <time>10.20 15:20</time>
-                                        </a>
-                                    </li>
-                                {% endfor %}
+                                <li>
+                                    <a href="#">
+                                        <p>2학년 되고</p>
+                                        <time>10.20 15:20</time>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <p>지갑 잃어버리신 분??</p>
+                                        <time>10.20 10:20</time>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <p>다목하우스 주인 전화번호</p>
+                                        <time>10.20 12:10</time>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <p>쌍촌동 가는 셔틀</p>
+                                        <time>10.21 14:20</time>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
 
@@ -91,14 +155,30 @@
                         <div class="borderBox paddingBox">
                             <strong>홍보게시판<a href="#">+</a></strong>
                             <ul class="hoverEvent">
-                                {% for data in community2 %}
-                                    <li>
-                                        <a href="#">
-                                            <p>{{ data.title }}</p>
-                                            <time>10.20 15:20</time>
-                                        </a>
-                                    </li>
-                                {% endfor %}
+                                <li>
+                                    <a href="#">
+                                        <p>2학년 되고</p>
+                                        <time>10.20 15:20</time>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <p>지갑 잃어버리신 분??</p>
+                                        <time>10.20 10:20</time>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <p>다목하우스 주인 전화번호</p>
+                                        <time>10.20 12:10</time>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <p>쌍촌동 가는 셔틀</p>
+                                        <time>10.21 14:20</time>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </div>
